--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "backend/*.kernel": "php",
+        "*.component": "html",
+        "*.activity": "html",
+        "*.sense": "html",
         "*.smake": "php",
         "*.settings": "json"
     },
