--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
 		"@types/node": "^17.0.17",
 		"@types/yandex-maps": "^2.1.20",
 		"esm": "^3.2.25",
-		"sensen-jutsu": "^0.0.101",
+		"sensen-jutsu": "^0.0.102",
+		"sensen-plugin-modal": "^0.0.6",
 		"sensen-plugin-themecolor": "^0.0.2",
 		"sensen-wireframe": "^0.0.2",
 		"typescript": "^4.5.5"
