--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 backend/packages
 frontend/node_modules
+frontend/*.lock
 frontend/.caches
+frontend/pipe
+frontend/build
 .caches.packages
 .gitignore
